<resources>
    <string name="app_name">Wellness</string>
    <string name="begin">Begin</string>
    <string name="gender">GENDER</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="name">NAME</string>
    <string name="birth">DATE OF BIRTH</string>
    <string name="preexisting">DO YOU HAVE ANY PRE-EXISTING CONDITIONS?</string>
    <string name="none">None</string>
    <string name="agreement">I agree to the Terms and Conditions</string>
    <string name="underweight">less than 18.5</string>
    <string name="normal">18.5 - 24.9</string>
    <string name="overweight">25 - 29.9</string>
    <string name="obese">30 - 34.9</string>
    <string name="extremeobese">40+</string>
    <string name="string_underweight">UNDERWEIGHT</string>
    <string name="string_normal">NORMAL</string>
    <string name="string_overweight">OVERWEIGHT</string>
    <string name="string_obese">OBESE</string>
    <string name="string_extremeobese">EXTREME OBESE</string>
    <string name="hint_height">HEIGHT (CM)</string>
    <string name="hint_weight">WEIGHT (KG)</string>
    <string name="next">NEXT ></string>
    <string name="usual">USUAL</string>
    <string name="sleeping">SLEEPING</string>
    <string name="average_sleeping">AVERAGE SLEEPING TIME</string>
    <string name="time">TIME</string>
    <string name="waking">WAKING</string>
    <string name="exercise">HOW OFTEN DO YOU EXCERCISE?</string>
    <string name="meal">HOW WOULD YOU DESCRIBE YOUR AVERAGE MEAL?</string>
    <string name="junk">JUNK FOOD</string>
    <string name="balance">BALANCED</string>
    <string name="ffg">FRIED, FATTY AND GREASY</string>
    <string name="vegetarian">VEGETARIAN</string>
    <string name="routine">HOW WOULD YOU DESCRIBE YOUR NORMAL WORK ROUTINE?</string>
    <string name="back"> BACK </string>
    <string name="done">DONE</string>
    <string name="create">CREATE</string>
    <string name="cancel">CANCEL</string>
    <string name="concent">
        By joining this PFIZER HEALTHCHECK, I understand and acknowledge that I may be disclosing personal information, which would be collected, processed, and stored in an automated Pfizer-managed member database system and/or in the member database system of its affiliates or authorized third parties, and which shall be used and administered solely by Pfizer and its said affiliate companies and authorized third parties in connection with the implementation and enhancements of the (state program here). I give my consent to Pfizer and its directors, officers, employees, advisers, agents, and representatives’ (a) collection, processing, storage, and use of personal information; and (b) outsourcing of the collection, processing, storage, and use of personal information to service providers whether within or outside the Philippines. The foregoing constitute my express consent under the applicable confidentiality and data privacy law of the Philippines and other jurisdictions, and agree to hold Pfizer and relevant parties free and harmless from any and all liabilities, claims, damages, and suits of whatever kind and nature that may arise in connection with the implementation and compliance with the authorization I confer hereunder. The foregoing is without prejudice to my rights to reasonable access to, upon demand, and correction of my personal information, as well as my right to lodge a complaint before the National Privacy Commission, under Section 16 of the Data Privacy Act. I likewise agree that the information referred to in this section may be disclosed to any of Pfizer-authorized affiliates and third parties for any purposes that may include implementation and improvement of the (describe program here). For these purposes, Pfizer and its authorized affiliates or authorized third parties shall store personal information, as defined under Section 3 (g) of the Data Privacy Act, within (state here period within which it would be stored). Finally, by providing my mobile number and/or email address, I hereby confirm and provide consent for Pfizer, its employees and/or affiliates, or authorized third parties to send notifications on Pfizer product updates, CME Announcements, Medical Information, and contact me through the same.
    </string>
    <string name="concent_title">CONSENT FORM</string>
    <string name="export">EXPORT EXCEL</string>
    </resources>
