<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="12"
    android:background="@drawable/healthcheckbg">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="11"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center"
                android:gravity="center|top"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="300dp"
                    android:layout_height="112dp"
                    android:gravity="center"
                    android:src="@drawable/logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="40dp"
                    android:textStyle="bold"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textColor="#0773ba" />

                <EditText
                    android:id="@+id/textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="#0773ba"
                    android:background="@drawable/nameinputbg"
                    android:elevation="5dp"
                    android:alpha="0.7" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:textStyle="bold"
                    android:text="@string/gender"
                    android:textAlignment="center"
                    android:textColor="#0773ba" />

                <RadioGroup
                    android:id="@+id/radioGender"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                            <RadioButton
                                android:id="@+id/radioMale"
                                android:layout_weight="1"
                                android:textColor="#0773ba"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_male" />

                            <RadioButton
                                android:id="@+id/radioFemale"
                                android:layout_weight="1"
                                android:textColor="#0773ba"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_female" />

                    </LinearLayout>

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/birth"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="#0773ba" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <Spinner
                        android:id="@+id/spinnerMonth"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Spinner
                        android:id="@+id/spinnerDay"
                        android:layout_weight="1"
                        android:textColor="#0773ba"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/spinnerYear"
                        android:layout_weight="1"
                        android:textColor="#0773ba"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:textStyle="bold"
                    android:text="@string/preexisting"
                    android:textAlignment="center"
                    android:textColor="#0773ba" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <Spinner
                        android:id="@+id/spinnerYesNo"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:textColor="#0773ba"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/radioNone"
                        android:layout_weight="1"
                        android:textColor="#0773ba"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />

                </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:gravity="center|bottom"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_submit"
        android:background="@drawable/buttonbg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|center"
        android:text="SUBMIT >" />

    </LinearLayout>
</LinearLayout>

