<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:background="@drawable/topbg"
        app:popupTheme="@style/AppTheme"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/minilogo"/>

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:background="@android:color/transparent"
            android:text="NEXT >" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#ffffff"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.6"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/bmi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#ffffff"
            android:alpha="0.6"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUnderweight"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:textColor="#ffffff"
                        android:textSize="9dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="#949494"
                        android:text="@string/underweight" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:textColor="#5c5c5c"
                        android:textSize="9dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/string_underweight" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNormal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:textColor="#ffffff"
                        android:textSize="9dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="#41c2f1"
                        android:text="@string/normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:textColor="#5c5c5c"
                        android:textSize="9dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/string_normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvOverweight"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:textColor="#ffffff"
                        android:textSize="9dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="#b2b2b2"
                        android:text="@string/overweight" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:textColor="#5c5c5c"
                        android:textSize="9dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/string_overweight" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvObese"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:textColor="#ffffff"
                        android:textSize="9dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="#9d9d9d"
                        android:text="@string/obese" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:textColor="#5c5c5c"
                        android:textSize="9dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/string_obese" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvExtremeObeses"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:textSize="9dp"
                        android:textColor="#ffffff"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="#949494"
                        android:text="@string/extremeobese" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:textColor="#5c5c5c"
                        android:textSize="9dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/string_extremeobese" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tBmiResult"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textlines"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textAlignment="center"
                    android:textColor="#41c2f1"
                    android:textSize="40sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/etHeight"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:alpha="0.7"
                        android:background="@drawable/border"
                        android:elevation="5dp"
                        android:ellipsize="end"
                        android:ems="10"
                        android:hint="@string/hint_height"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textColor="#0773ba"
                        android:textColorHint="#0773ba" />

                    <EditText
                        android:id="@+id/etWeight"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:alpha="0.7"
                        android:background="@drawable/border"
                        android:elevation="5dp"
                        android:ellipsize="end"
                        android:ems="10"
                        android:hint="Weight (kg)"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textColor="#0773ba"
                        android:textColorHint="#0773ba" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnCalculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Calculate"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:background="#55c7f0"
                    android:textColor="#ffffff"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>