<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:background="@drawable/topbg"
        app:popupTheme="@style/AppTheme"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/minilogo"/>

        <Button
            android:id="@+id/nextbuttonsleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:background="@android:color/transparent"
            android:text="@string/next" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sleepnight"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/usual"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sleeping"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/time"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etSleep"
                android:layout_width="147dp"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/timebg"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:inputType="time"
                android:text="00:00"
                android:textColor="#3cb60a"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/wakemorning"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/usual"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/waking"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/time"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etWake"
                android:layout_width="147dp"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/timebg"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:inputType="time"
                android:text="00:00"
                android:textColor="#3cb60a"
                android:textSize="40sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#21b377"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/average_sleeping"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSleepingTime"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:background="@drawable/timebg"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="00:00"
            android:textColor="#ca3737"
            android:textSize="40sp" />

    </LinearLayout>

</LinearLayout>